samples/_failures_safe/1761202874_d57e09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c1ec824.c: In function ‘main’:
./samples/SAFE/__tmp_7c1ec824.c:156:9: error: expected declaration or statement at end of input
  156 |         }
      |         ^
./samples/SAFE/__tmp_7c1ec824.c:156:9: error: expected declaration or statement at end of input
